@@ -1,3 +1,8 @@
+2010-02-03  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>
+
+	* src/command.c (pause_command): Loop of waitforinput() for "pause -1"
+	in console mode of Windows.
+
 2010-02-02  Christoph Junghans (ottxor)
 
 	* configure.in share/LaTeX/Makefile.am:
